[tool.poetry]
name = "tech-interview-prep"
version = "0.1.0"
description = ""
authors = ["KaiErikNiermann <kai.niermann@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
six = "^1.16.0"
sphinx = "^7.2.6"
commonmark = "^0.9.1"
myst-parser = "^2.0.0"
m2r2 = "^0.3.3.post2"
recommonmark = "^0.7.1"
sphinx-math-dollar = "^1.2.1"
timeout-decorator = "^0.5.0"
pip = "^24.0"
ipykernel = "^6.29.4"
matplotlib = "^3.8.3"
tqdm = "^4.66.2"
requests = "^2.31.0"
pytest = "^8.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
